# REVOU-FINAL_PROJECT-BACKEND

./: .dockerignore  .flaskenv  Dockerfile  Dockerfile.txt  README.md  TODO.md  config_default.py  docker-entrypoint.sh  pyproject.toml  waitress_server.py
app/: __init__.py  todo.md
app/data_store_service/: __init__.py  data_object.py  data_store.py  data_storeable.py  readme.md
app/database_connector/: __init__.py  data.db  mysql_connector.py  readme.md  sqlite_connector.py
app/datetime_service/: __init__.py
app/final_project_api/: __init__.py  config_default.py  conftest.py  main.py
app/final_project_api/business_module/: data.py  (+5 more)
app/image_upload_service/: Image_service.py  __init__.py  cloudinary_service.py  image_data.py  image_schema.py  image_service_able.py
app/jwt_service/: __init__.py  jwt_data.py
app/message_service/: __init__.py  en-gb.json  message_service.py
app/model_base_service/: __init__.py  data_base_default.py  db.py  model_base.py  model_base_default.py  model_base_instance.py  model_base_sequence.py  model_base_service.py  readme.md  session_type.py  sql_model_instance.py
app/util/: __init__.py  query_data.py
script/: cov.bat  docjer_run.bat  docker-entrypoint.sh  docker_build.bat  docker_run.bat  flask_run.bat  test.bat  weitress.bat
script/api/: all_business.bat  all_product.bat  login.bat  register.bat
templates/: index.html
tests/: data.db  mock_database_connection.py  mock_flask.py
tests/message_service/: test_message_service.py
tests/model_base_service/: mock_data.py  mock_model.py  test_model_base_service.py
(+98 files in other folders)
