[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DewaSRY <sdewa6645@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-smorest = "^0.44.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
flask-sqlalchemy = "^3.1.1"
marshmallow = "^3.21.1"
flask-migrate = "^4.0.7"
flask-jwt-extended = "^4.6.0"
passlib = "^1.7.4"
flask-cors = "^4.0.0"
cloudinary = "^1.40.0"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
